assets/style.css
div>h1 {
  color: black;
  margin-top: 50px;
  display: block;
  text-align: center;

}

body {
  background-image: url("/assets/images/background.jpg");
  object-fit: contain;
  background: 0,0,0,.3;
}

.aboutMe{
  text-align: left;
  font-size: 16pt;
  margin-left: 20%;
  margin-right: 20%;
  margin-top: 10%;
  font-weight: bold;
}

.myPhoto > img{
  border-radius: 60%;
  width: 500px;
}

.nav-item:hover{
  background-color: grey;
  border-radius: 10px;
}

.nav-link {
  color: white;
}

.footer>a>img{
  width: 50px;
  border-radius: 50%;
  grid-column-gap: 10px;
}

.footer{
  text-align: center;
  margin-left: 50%;
  margin-right: 50%;
}

.grid-item1 {
  grid-area: header;
}

.grid-item2{
  margin-top: 50px;
  margin-left: 30%;
  margin-bottom: 30px;
  grid-area: left-h;
}

.grid-item3 {
  grid-area: left;
  margin-left: 30%;

}

.grid-item4 {
  grid-area: left;
  margin-top: 50px;
  margin-left: 30%;

}

.grid-item5 {
  margin-top: 50px;
  grid-area: right;

}

.grid-item6 {
  grid-area: right;

}

.grid-item7{
  padding-top: 50px;
  margin-left: 30%;
  margin-bottom: 30px;
  grid-area: left-h;
}

.grid-item>p{
  padding-top: 25%;
}

.grid-container>div{
  color: black;
  font-size: 14pt;

}

.grid-container{
  display: grid;
  grid-column-gap: 50px;
  grid-template-areas:
    'header header header header'
    'left-h left-h right-h right-h'
    'left left right right'
    'footer footer footer footer';

}

